replace heroicons with react icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,13 @@
 .slick-dots {
     bottom: 6px !important;
 }
+/* horizontal menu style */
+
+/* chrome and chromium based */
+.react-horizontal-scrolling-menu--scroll-container::-webkit-scrollbar {
+    display: none;
+}
+.react-horizontal-scrolling-menu--scroll-container {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
