updated fonts and Images

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .slick-dots {
     bottom: 6px !important;
+}
+
+@font-face {
+    font-family: "PT Serif";
+    src: url("./fonts/pt-serif_regular.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 *,
