--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,15 +7,7 @@
     bottom: 6px !important;
 }
 
-@font-face {
-    font-family: "PT Serif";
-    src: url("./fonts/pt-serif_regular.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
 *,
 body {
-    font-family: "PT Serif", serif !important;
+    font-family: "Lora", serif !important;
 }
